[gd_scene load_steps=8 format=3 uid="uid://q70i2t0eijtp"]

[ext_resource type="PackedScene" uid="uid://bh0qaobwbe0d4" path="res://Objects/paddle.tscn" id="1_7oiuu"]
[ext_resource type="Script" path="res://Scripts/Paddle/paddle.gd" id="2_e2rjw"]
[ext_resource type="PackedScene" uid="uid://cvxjr1w8fiktq" path="res://Objects/ball.tscn" id="3_33oqe"]
[ext_resource type="Script" path="res://Scripts/Paddle/AIpaddle.gd" id="3_gfexd"]
[ext_resource type="Script" path="res://Scripts/GameModea/NextRound.gd" id="6_xq2fn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2jw6g"]
size = Vector2(1970, 12.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbash"]
size = Vector2(43, 1048)

[node name="Main" type="Node2D"]
position = Vector2(50, 31)

[node name="Paddle" parent="." instance=ExtResource("1_7oiuu")]
position = Vector2(-27, 509)
script = ExtResource("2_e2rjw")

[node name="Ball" parent="." instance=ExtResource("3_33oqe")]
position = Vector2(909, 480)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="TopBound" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(895, -31.125)
shape = SubResource("RectangleShape2D_2jw6g")

[node name="BottomBound" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(917, 1046)
shape = SubResource("RectangleShape2D_2jw6g")

[node name="Paddle2" parent="." instance=ExtResource("1_7oiuu")]
position = Vector2(1851, 489)
rotation = 3.14159
script = ExtResource("3_gfexd")

[node name="PlayerGoalArera" type="Area2D" parent="."]

[node name="PlayerGoal" type="CollisionShape2D" parent="PlayerGoalArera" groups=["GoalNet"]]
position = Vector2(-76, 505)
shape = SubResource("RectangleShape2D_jbash")

[node name="AiGoalArea" type="Area2D" parent="."]

[node name="AiGoal" type="CollisionShape2D" parent="AiGoalArea" groups=["GoalNet"]]
position = Vector2(1906, 508)
shape = SubResource("RectangleShape2D_jbash")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("6_xq2fn")
metadata/_edit_use_anchors_ = true

[node name="NewRound" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.375
anchor_top = 4.275
anchor_right = 8.375
anchor_bottom = 4.275
offset_left = 537.0
offset_top = 59.0
offset_right = 619.0
offset_bottom = 120.0
text = "START"

[node name="PlayerScore" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.375
anchor_top = 4.275
anchor_right = 8.375
anchor_bottom = 4.275
offset_left = 395.0
offset_top = 267.0
offset_right = 471.0
offset_bottom = 351.0
text = "P:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AiScore" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.375
anchor_top = 4.275
anchor_right = 8.375
anchor_bottom = 4.275
offset_left = 705.0
offset_top = 266.0
offset_right = 781.0
offset_bottom = 350.0
text = "AI:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shoppe" type="Button" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.375
anchor_top = 4.275
anchor_right = 8.375
anchor_bottom = 4.275
offset_left = 522.0
offset_top = 445.0
offset_right = 624.0
offset_bottom = 487.0
text = "SHOPPE"

[node name="Points" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.375
anchor_top = 4.275
anchor_right = 8.375
anchor_bottom = 4.275
offset_left = 638.0
offset_top = 446.0
offset_right = 694.0
offset_bottom = 490.0
text = "ðŸª™"
vertical_alignment = 1

[node name="closeGame" type="Button" parent="UI"]
offset_left = -21.0
offset_top = -14.0
offset_right = 66.0
offset_bottom = 20.0
text = "QUIT"

[connection signal="pointawarded" from="Paddle" to="UI" method="_on_paddle_pointawarded"]
[connection signal="body_entered" from="Paddle/Area2D" to="Paddle" method="_on_area_2d_body_entered"]
[connection signal="ai_scored" from="Ball" to="UI" method="_on_ball_ai_scored"]
[connection signal="player_scored" from="Ball" to="UI" method="_on_ball_player_scored"]
[connection signal="body_entered" from="PlayerGoalArera" to="Ball" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="AiGoalArea" to="Ball" method="_on_area_2d_2_body_entered"]
[connection signal="pressed" from="UI/NewRound" to="Ball" method="_on_new_round_pressed"]
[connection signal="pressed" from="UI/NewRound" to="UI" method="_on_new_round_pressed"]
[connection signal="pressed" from="UI/closeGame" to="UI" method="_on_close_game_pressed"]

[editable path="Paddle"]
